<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/layout_margin"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".AboutMeActivity">

    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="intentHome"
        android:text="@string/back_to_home" />

    <TextView
        android:id="@+id/textName"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray" />

    <EditText
        android:id="@+id/nickname_edit"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/what_is_your_nickname"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/done"
        app:rippleColor="#9E6262"
        app:strokeColor="#3C3C3C" />

    <TextView
        android:id="@+id/nickname_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageStar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/bio_scroll"
        style="button"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/bio_text"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:paddingStart="@dimen/layout_padding"
            android:paddingEnd="@dimen/layout_padding"
            android:text="@string/bio"
            android:textColor="@android:color/darker_gray" />
    </ScrollView>


</LinearLayout>