<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#df7349"
    tools:context=".ActivityC">

    <Button
        android:id="@+id/btnA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="intentA"
        android:text="@string/activity_a" />

    <Button
        android:id="@+id/btnB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="intentB"
        android:text="@string/btnB" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="intentHome"
        android:text="@string/back_to_home" />
</LinearLayout>